chore: add auto merge

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,7 @@
     "config:base",
     "helpers:pinGitHubActionDigests",
     "docker:pinDigests"
-  ]
+  ],
+  "rebaseWhen": "conflicted",
+  "automerge": true
 }
