--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -14,6 +14,7 @@ on:
     paths:
       - Dockerfile
       - requirements.txt
+      - .github/workflows/Docker.yml
 
 env:
   workflow_image: oci-cli
