chore: update docker ci

--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Setup Buildx
         uses: docker/setup-buildx-action@95cb08cb2672c73d4ffd2f422e6d11953d2a9c70 # tag=v2.1.0
 
-      - name: Build & Push
+      - name: Multiarch Test
         uses: docker/build-push-action@c56af957549030174b10d6867f20e78cfd7debc5 # tag=v3.2.0
         with:
           file: Dockerfile
@@ -82,8 +82,8 @@ jobs:
         id: get_version
         run: |
           version=$(grep 'oci-cli==' requirements.txt | cut -d "=" -f 3)
-          echo "Current image version is $image_version"
-          echo "::set-output name=image_version::$version"
+          echo "## Image Version: ${version}" >> $GITHUB_STEP_SUMMARY
+          echo "image_version=${version}" >> $GITHUB_OUTPUT
 
       - name: Docker meta
         id: meta
